--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,12 +13,16 @@
     "@types/js-cookie": "^3.0.3",
     "axios": "^1.3.5",
     "clsx": "^1.2.1",
+    "i18next": "^22.4.14",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
     "js-cookie": "^3.0.1",
     "json-server": "^0.17.3",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
